# E-CVRP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/EVRPTW/: C101-10.evrp  C101-5.evrp  C103-15.evrp  C103-5.evrp  C104-10.evrp  C106-15.evrp  C202-10.evrp  C202-15.evrp  C205-10.evrp  C206-5.evrp  C208-15.evrp  C208-5.evrp  R102-10.evrp  R102-15.evrp  R103-10.evrp  R104-5.evrp  R105-15.evrp  R105-5.evrp  R201-10.evrp  R202-15.evrp  R202-5.evrp  R203-10.evrp  R203-5.evrp  R209-15.evrp  RC102-10.evrp  RC103-15.evrp  RC105-5.evrp  RC108-10.evrp  RC108-15.evrp  RC108-5.evrp  RC201-10.evrp  RC202-15.evrp  RC204-15.evrp  RC204-5.evrp  RC205-10.evrp  RC208-5.evrp  README.txt  c101.evrp  c102.evrp  c103.evrp  (+55 more)
data/WCCI2020/: README.txt  instance_summary.csv
data/WCCI2020-Extension/: instance_summary.csv
docs/: algorithms.md  architecture.md  scripts.md  setup.md
include/: case.hpp  command_line.hpp  follower.hpp  heuristic_interface.hpp  individual.hpp  initializer.hpp  lahc.hpp  leader.hpp  leader_cbma.hpp  leader_lahc.hpp  leader_single.hpp  parameters.hpp  preprocessor.hpp  stats_interface.hpp  two_stage_alns.hpp
src/: case.cpp  command_line.cpp  follower.cpp  individual.cpp  initializer.cpp  lahc.cpp  leader.cpp  leader_cbma.cpp  leader_lahc.cpp  leader_single.cpp  preprocessor.cpp  stats_interface.cpp  two_stage_alns.cpp
tests/: case_test.cpp  command_line_test.cpp  follower_test.cpp  test_main.cpp  two_stage_alns_test.cpp
